--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -5077,8 +5077,6 @@
   "@badgeFirstFeedingDesc": {"description":"배지 설명: 첫 수유"},
   "badgeFirstFeedingWarm": "첫 수유... 사랑이 가득한 순간이에요.",
   "@badgeFirstFeedingWarm": {"description":"배지 따뜻한 톤: 첫 수유"},
-  "badgeFirstFeedingHumor": "미션: 첫 수유 완료!",
-  "@badgeFirstFeedingHumor": {"description":"배지 유머 톤: 첫 수유"},
 
   "badgeFeeding10Title": "수유 10회",
   "@badgeFeeding10Title": {"description":"배지: 수유 10회"},
@@ -5086,8 +5084,6 @@
   "@badgeFeeding10Desc": {"description":"배지 설명: 수유 10회"},
   "badgeFeeding10Warm": "10번의 수유... 한 방울 한 방울이 사랑이에요.",
   "@badgeFeeding10Warm": {"description":"배지 따뜻한 톤: 수유 10회"},
-  "badgeFeeding10Humor": "수유 10회 달성! 파이팅!",
-  "@badgeFeeding10Humor": {"description":"배지 유머 톤: 수유 10회"},
 
   "badgeFeeding50Title": "수유 50회",
   "@badgeFeeding50Title": {"description":"배지: 수유 50회"},
@@ -5095,8 +5091,6 @@
   "@badgeFeeding50Desc": {"description":"배지 설명: 수유 50회"},
   "badgeFeeding50Warm": "50번의 수유... 정말 멋진 부모예요.",
   "@badgeFeeding50Warm": {"description":"배지 따뜻한 톤: 수유 50회"},
-  "badgeFeeding50Humor": "50회! 아기가 감사해하고 있어요!",
-  "@badgeFeeding50Humor": {"description":"배지 유머 톤: 수유 50회"},
 
   "badgeMilk1LTitle": "1리터의 사랑",
   "@badgeMilk1LTitle": {"description":"배지: 누적 1L 수유"},
@@ -5104,8 +5098,6 @@
   "@badgeMilk1LDesc": {"description":"배지 설명: 1L 수유"},
   "badgeMilk1LWarm": "1리터의 사랑... 한 밀리리터도 소중해요.",
   "@badgeMilk1LWarm": {"description":"배지 따뜻한 톤: 1L"},
-  "badgeMilk1LHumor": "1리터! 정말 많은 양이에요!",
-  "@badgeMilk1LHumor": {"description":"배지 유머 톤: 1L"},
 
   "badgeNightFeedingTitle": "새벽의 영웅",
   "@badgeNightFeedingTitle": {"description":"배지: 새벽 수유"},
@@ -5113,8 +5105,6 @@
   "@badgeNightFeedingDesc": {"description":"배지 설명: 새벽 수유"},
   "badgeNightFeedingWarm": "새벽에 수유하는 당신... 가장 용감한 부모예요.",
   "@badgeNightFeedingWarm": {"description":"배지 따뜻한 톤: 새벽 수유"},
-  "badgeNightFeedingHumor": "잠이 뭐예요? 히어로 모드 ON!",
-  "@badgeNightFeedingHumor": {"description":"배지 유머 톤: 새벽 수유"},
 
   "badgeFirstSleepTitle": "첫 수면",
   "@badgeFirstSleepTitle": {"description":"배지: 첫 수면 기록"},
@@ -5122,8 +5112,6 @@
   "@badgeFirstSleepDesc": {"description":"배지 설명: 첫 수면"},
   "badgeFirstSleepWarm": "달콤한 꿈이 시작됐어요...",
   "@badgeFirstSleepWarm": {"description":"배지 따뜻한 톤: 첫 수면"},
-  "badgeFirstSleepHumor": "Zzz... 첫 낮잠 기록 완료!",
-  "@badgeFirstSleepHumor": {"description":"배지 유머 톤: 첫 수면"},
 
   "badgeSleep10Title": "수면 10회",
   "@badgeSleep10Title": {"description":"배지: 수면 10회"},
@@ -5131,8 +5119,6 @@
   "@badgeSleep10Desc": {"description":"배지 설명: 수면 10회"},
   "badgeSleep10Warm": "10번의 평화로운 수면... 잘하고 있어요.",
   "@badgeSleep10Warm": {"description":"배지 따뜻한 톤: 수면 10회"},
-  "badgeSleep10Humor": "수면 10회! 수면 전문가 수련 중!",
-  "@badgeSleep10Humor": {"description":"배지 유머 톤: 수면 10회"},
 
   "badgeSleepThroughTitle": "첫 통잠",
   "@badgeSleepThroughTitle": {"description":"배지: 첫 통잠"},
@@ -5140,8 +5126,6 @@
   "@badgeSleepThroughDesc": {"description":"배지 설명: 통잠"},
   "badgeSleepThroughWarm": "밤새 푹 잤어요... 둘 다 이 순간을 받을 자격이 있어요.",
   "@badgeSleepThroughWarm": {"description":"배지 따뜻한 톤: 통잠"},
-  "badgeSleepThroughHumor": "7시간 연속! 이게 현실이에요?!",
-  "@badgeSleepThroughHumor": {"description":"배지 유머 톤: 통잠"},
 
   "badgeSleepRoutineTitle": "수면 루틴",
   "@badgeSleepRoutineTitle": {"description":"배지: 3일 연속 수면"},
@@ -5149,8 +5133,6 @@
   "@badgeSleepRoutineDesc": {"description":"배지 설명: 수면 루틴"},
   "badgeSleepRoutineWarm": "3일의 루틴... 건강한 습관을 만들고 있어요.",
   "@badgeSleepRoutineWarm": {"description":"배지 따뜻한 톤: 수면 루틴"},
-  "badgeSleepRoutineHumor": "3일 연속! 꾸준함이 답이에요!",
-  "@badgeSleepRoutineHumor": {"description":"배지 유머 톤: 수면 루틴"},
 
   "badgeSleepWeekTitle": "수면 주간 마스터",
   "@badgeSleepWeekTitle": {"description":"배지: 7일 연속 수면"},
@@ -5158,8 +5140,6 @@
   "@badgeSleepWeekDesc": {"description":"배지 설명: 수면 주간"},
   "badgeSleepWeekWarm": "일주일 내내... 당신의 헌신이 아름다워요.",
   "@badgeSleepWeekWarm": {"description":"배지 따뜻한 톤: 수면 주간"},
-  "badgeSleepWeekHumor": "7일! 메달을 드려야... 아, 이미 드렸네요!",
-  "@badgeSleepWeekHumor": {"description":"배지 유머 톤: 수면 주간"},
 
   "badgeFirstRecordTitle": "안녕, 루루!",
   "@badgeFirstRecordTitle": {"description":"배지: 첫 기록"},
@@ -5167,8 +5147,6 @@
   "@badgeFirstRecordDesc": {"description":"배지 설명: 첫 기록"},
   "badgeFirstRecordWarm": "여정이 시작됐어요... 루루에 오신 걸 환영해요.",
   "@badgeFirstRecordWarm": {"description":"배지 따뜻한 톤: 첫 기록"},
-  "badgeFirstRecordHumor": "첫 기록! 시작이 반이에요!",
-  "@badgeFirstRecordHumor": {"description":"배지 유머 톤: 첫 기록"},
 
   "badge3DayStreakTitle": "3일 연속",
   "@badge3DayStreakTitle": {"description":"배지: 3일 연속 기록"},
@@ -5176,8 +5154,6 @@
   "@badge3DayStreakDesc": {"description":"배지 설명: 3일 연속"},
   "badge3DayStreakWarm": "3일을 함께했어요... 모든 순간이 소중해요.",
   "@badge3DayStreakWarm": {"description":"배지 따뜻한 톤: 3일 연속"},
-  "badge3DayStreakHumor": "3일! 불타오르고 있어요!",
-  "@badge3DayStreakHumor": {"description":"배지 유머 톤: 3일 연속"},
 
   "badge7DayStreakTitle": "7일 챔피언",
   "@badge7DayStreakTitle": {"description":"배지: 7일 연속 기록"},
@@ -5185,8 +5161,6 @@
   "@badge7DayStreakDesc": {"description":"배지 설명: 7일 연속"},
   "badge7DayStreakWarm": "일주일 내내... 최고의 부모예요.",
   "@badge7DayStreakWarm": {"description":"배지 따뜻한 톤: 7일 연속"},
-  "badge7DayStreakHumor": "7일 연속! 기네스북에 전화해야겠어요!",
-  "@badge7DayStreakHumor": {"description":"배지 유머 톤: 7일 연속"},
 
   "badgeDay7Title": "첫 일주일",
   "@badgeDay7Title": {"description":"배지: 출생 7일"},
@@ -5194,8 +5168,6 @@
   "@badgeDay7Desc": {"description":"배지 설명: 7일"},
   "badgeDay7Warm": "일주일을 함께했어요... 매 순간이 보물이에요.",
   "@badgeDay7Warm": {"description":"배지 따뜻한 톤: 7일"},
-  "badgeDay7Humor": "7일 생존 완료! 업적 해제: 첫 주 클리어!",
-  "@badgeDay7Humor": {"description":"배지 유머 톤: 7일"},
 
   "badgeDay100Title": "100일 함께",
   "@badgeDay100Title": {"description":"배지: 출생 100일"},
@@ -5203,8 +5175,6 @@
   "@badgeDay100Desc": {"description":"배지 설명: 100일"},
   "badgeDay100Warm": "100일간의 사랑과 성장... 정말 잘하고 계세요.",
   "@badgeDay100Warm": {"description":"배지 따뜻한 톤: 100일"},
-  "badgeDay100Humor": "100일! 기저귀 약 2,400개... 대략적인 수치입니다.",
-  "@badgeDay100Humor": {"description":"배지 유머 톤: 100일"},
 
   "badgeMonth1Title": "한 달",
   "@badgeMonth1Title": {"description":"배지: 출생 1개월"},
@@ -5212,8 +5182,6 @@
   "@badgeMonth1Desc": {"description":"배지 설명: 1개월"},
   "badgeMonth1Warm": "한 달... 함께 얼마나 멀리 왔는지 보세요.",
   "@badgeMonth1Warm": {"description":"배지 따뜻한 톤: 1개월"},
-  "badgeMonth1Humor": "30일 돌파! 이제 거의 프로급이에요!",
-  "@badgeMonth1Humor": {"description":"배지 유머 톤: 1개월"},
 
   "badgeCorrectedTermTitle": "만삭 도달",
   "@badgeCorrectedTermTitle": {"description":"배지: 조산아 교정연령 만삭"},
@@ -5221,8 +5189,6 @@
   "@badgeCorrectedTermDesc": {"description":"배지 설명: 교정만삭"},
   "badgeCorrectedTermWarm": "기다리던 그 날... 우리 작은 전사가 만삭에 도달했어요.",
   "@badgeCorrectedTermWarm": {"description":"배지 따뜻한 톤: 교정만삭"},
-  "badgeCorrectedTermHumor": "만삭 달성! 아기가 계속 레벨업 중이었어요!",
-  "@badgeCorrectedTermHumor": {"description":"배지 유머 톤: 교정만삭"},
 
   "badgeMultiplesFirstRecordTitle": "다태아 여정 시작",
   "@badgeMultiplesFirstRecordTitle": {"description":"배지: 다태아 첫 기록"},
@@ -5230,8 +5196,6 @@
   "@badgeMultiplesFirstRecordDesc": {"description":"배지 설명: 다태아 첫 기록"},
   "badgeMultiplesFirstRecordWarm": "모험이 시작됐어요... 두 배의 사랑, 두 배의 기쁨.",
   "@badgeMultiplesFirstRecordWarm": {"description":"배지 따뜻한 톤: 다태아 첫 기록"},
-  "badgeMultiplesFirstRecordHumor": "첫 기록 완료! 다태아라 백만 개 정도 더 남았어요!",
-  "@badgeMultiplesFirstRecordHumor": {"description":"배지 유머 톤: 다태아 첫 기록"},
 
   "badgeMultiplesAllFedTitle": "모두 먹었어요",
   "@badgeMultiplesAllFedTitle": {"description":"배지: 같은 날 모든 아기 수유"},
@@ -5239,8 +5203,6 @@
   "@badgeMultiplesAllFedDesc": {"description":"배지 설명: 전원 수유"},
   "badgeMultiplesAllFedWarm": "모든 아기를 돌봤어요... 정말 잘하고 계세요.",
   "@badgeMultiplesAllFedWarm": {"description":"배지 따뜻한 톤: 전원 수유"},
-  "badgeMultiplesAllFedHumor": "하루에 전원 수유! 멀티태스킹 레벨: 전문가!",
-  "@badgeMultiplesAllFedHumor": {"description":"배지 유머 톤: 전원 수유"},
 
   "badgeMultiplesAllSleptTitle": "평화로운 밤",
   "@badgeMultiplesAllSleptTitle": {"description":"배지: 같은 날 모든 아기 수면"},
@@ -5248,8 +5210,6 @@
   "@badgeMultiplesAllSleptDesc": {"description":"배지 설명: 전원 수면"},
   "badgeMultiplesAllSleptWarm": "모두 잠들었어요... 드물고 소중한 순간이에요.",
   "@badgeMultiplesAllSleptWarm": {"description":"배지 따뜻한 톤: 전원 수면"},
-  "badgeMultiplesAllSleptHumor": "전원 동시 취침? 셀카 찍든지... 아니면 주무세요!",
-  "@badgeMultiplesAllSleptHumor": {"description":"배지 유머 톤: 전원 수면"},
 
   "badgeCategoryGrowth": "성장",
   "@badgeCategoryGrowth": {"description":"배지 카테고리: 성장"},
@@ -5273,5 +5233,69 @@
   "badgeLocked": "계속 기록하면 열 수 있어요!",
   "@badgeLocked": {"description":"잠긴 배지 메시지"},
   "badgeEarnedAt": "{date} 획득",
-  "@badgeEarnedAt": {"description":"배지 획득 날짜", "placeholders": {"date": {"type": "String"}}}
+  "@badgeEarnedAt": {"description":"배지 획득 날짜", "placeholders": {"date": {"type": "String"}}},
+
+  "encouragementDawnWarm1": "이 시간에도 깨어 있는 부모님, 정말 대단해요",
+  "@encouragementDawnWarm1": {"description":"새벽 격려 1"},
+  "encouragementDawnWarm2": "밤이 길게 느껴질 수 있어요. 잘 해나가고 있어요",
+  "@encouragementDawnWarm2": {"description":"새벽 격려 2"},
+  "encouragementDawnWarm3": "{baby}이와 함께하는 고요한 새벽, 소중한 시간이에요",
+  "@encouragementDawnWarm3": {"description":"새벽 격려 3", "placeholders": {"baby": {"type": "String"}}},
+  "encouragementDawnWarm4": "조금만 더요. 아침이 오고 있어요",
+  "@encouragementDawnWarm4": {"description":"새벽 격려 4"},
+  "encouragementDawnPlain1": "새벽 돌봄 기록됨",
+  "@encouragementDawnPlain1": {"description":"새벽 plain 1"},
+  "encouragementDawnPlain2": "야간 활동 기록 중",
+  "@encouragementDawnPlain2": {"description":"새벽 plain 2"},
+  "encouragementDawnPlain3": "새벽 {count}회 기록",
+  "@encouragementDawnPlain3": {"description":"새벽 plain 3", "placeholders": {"count": {"type": "String"}}},
+
+  "encouragementMorningWarm1": "{baby}이와 함께 새로운 하루가 시작됐어요",
+  "@encouragementMorningWarm1": {"description":"아침 격려 1", "placeholders": {"baby": {"type": "String"}}},
+  "encouragementMorningWarm2": "오늘도 {baby}이를 잘 돌봐주고 있네요",
+  "@encouragementMorningWarm2": {"description":"아침 격려 2", "placeholders": {"baby": {"type": "String"}}},
+  "encouragementMorningPlain1": "오전 기록 시작",
+  "@encouragementMorningPlain1": {"description":"아침 plain 1"},
+  "encouragementMorningPlain2": "오늘 기록: {count}건",
+  "@encouragementMorningPlain2": {"description":"아침 plain 2", "placeholders": {"count": {"type": "String"}}},
+  "encouragementMorningPlain3": "전일 야간 기록 확인 가능",
+  "@encouragementMorningPlain3": {"description":"아침 plain 3"},
+
+  "encouragementAfternoonWarm2": "부모님도 틈틈이 쉬어가세요",
+  "@encouragementAfternoonWarm2": {"description":"오후 격려 2"},
+  "encouragementAfternoonWarm3": "{baby}이와 함께하는 오후, 좋은 시간이에요",
+  "@encouragementAfternoonWarm3": {"description":"오후 격려 3", "placeholders": {"baby": {"type": "String"}}},
+  "encouragementAfternoonPlain1": "오후 기록 진행 중",
+  "@encouragementAfternoonPlain1": {"description":"오후 plain 1"},
+  "encouragementAfternoonPlain2": "금일 기록 {count}건",
+  "@encouragementAfternoonPlain2": {"description":"오후 plain 2", "placeholders": {"count": {"type": "String"}}},
+
+  "encouragementEveningWarm1": "오늘 하루도 수고했어요. {baby}이도 부모님도 잘 해냈어요",
+  "@encouragementEveningWarm1": {"description":"저녁 격려 1", "placeholders": {"baby": {"type": "String"}}},
+  "encouragementEveningWarm2": "하루를 마무리하는 시간이에요. 푹 쉬세요",
+  "@encouragementEveningWarm2": {"description":"저녁 격려 2"},
+  "encouragementEveningWarm3": "{baby}이를 위해 쏟은 오늘 하루, 다 기억하고 있어요",
+  "@encouragementEveningWarm3": {"description":"저녁 격려 3", "placeholders": {"baby": {"type": "String"}}},
+  "encouragementEveningPlain1": "금일 기록 {count}건 완료",
+  "@encouragementEveningPlain1": {"description":"저녁 plain 1", "placeholders": {"count": {"type": "String"}}},
+  "encouragementEveningPlain2": "금일 활동 요약 가능",
+  "@encouragementEveningPlain2": {"description":"저녁 plain 2"},
+  "encouragementEveningPlain3": "기록 저장 완료",
+  "@encouragementEveningPlain3": {"description":"저녁 plain 3"},
+
+  "encouragementGeneralWarm1": "매일 조금씩, 아기도 부모도 성장하고 있어요",
+  "@encouragementGeneralWarm1": {"description":"일반 격려 1"},
+  "encouragementGeneralWarm2": "{baby}이의 하루하루가 소중한 기록이 되고 있어요",
+  "@encouragementGeneralWarm2": {"description":"일반 격려 2", "placeholders": {"baby": {"type": "String"}}},
+  "encouragementGeneralWarm3": "완벽하지 않아도 괜찮아요. 충분히 잘 하고 있어요",
+  "@encouragementGeneralWarm3": {"description":"일반 격려 3"},
+  "encouragementGeneralWarm4": "{baby}이를 위한 시간, 하나도 헛되지 않아요",
+  "@encouragementGeneralWarm4": {"description":"일반 격려 4", "placeholders": {"baby": {"type": "String"}}},
+
+  "encouragementDataBadgeWarm": "방금 [{badge}] 달성, 대단해요",
+  "@encouragementDataBadgeWarm": {"description":"데이터 기반: 뱃지 달성", "placeholders": {"badge": {"type": "String"}}},
+  "encouragementDataSleepWarm": "어젯밤 {baby}이가 {hours}시간 연속으로 잤어요",
+  "@encouragementDataSleepWarm": {"description":"데이터 기반: 수면", "placeholders": {"baby": {"type": "String"}, "hours": {"type": "String"}}},
+  "encouragementDataWeeklyWarm": "오늘 {count}건, 꼼꼼히 기록하고 있네요",
+  "@encouragementDataWeeklyWarm": {"description":"데이터 기반: 주간 기록", "placeholders": {"count": {"type": "String"}}}
 }
