feat(settings): Badge-2 - tone setting UI (warm/plain toggle)
- SettingsProvider: add isWarmTone state + SharedPreferences persistence
- SettingsScreen: add Message Tone section with Switch.adaptive toggle
- HomeScreen: pass isWarmTone to SweetSpotCard + EncouragementCard
- EncouragementCard: replace hardcoded 'warm' with dynamic tone value
- ARB: add 4 tone setting keys (sectionTone, toneSettingTitle, subtitleWarm/Plain)

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -262,6 +262,10 @@
   "sectionLanguage": "Language",
   "languageChangeConfirm": "Change language?",
   "languageChangeMessage": "The app will be displayed in the selected language.",
+  "sectionTone": "Message Tone",
+  "toneSettingTitle": "Warm Messages",
+  "toneSettingSubtitleWarm": "Encouraging and supportive messages",
+  "toneSettingSubtitlePlain": "Concise and straightforward messages",
   "feedingContentBreastMilk": "Breast Milk",
   "feedingContentFormula": "Formula",
   "feedingContentSolid": "Solid Food",
