fix(home): Sprint 23 Hotfix 1-5
HF-1: Remove accent line from SweetSpotCard (prototype artifact)
HF-2: Remove non-functional chevron from next nap hint
HF-3: Move badge icon from AppBar actions to leading
HF-4: Korean particle utility (KoreanParticle) + ARB/encouragement integration
  - Handle 받침-based particle selection (은/는, 이/가, 을/를, etc.)
  - Baby name suffix 이 deduplication (조이를, not 조이이를)
  - 9 ARB entries updated (ko + en), encouragement_card.dart integrated
HF-5: Add debug logging for sleep state tracking in SweetSpotCard
  - Code logic verified correct; debug prints added for real-device diagnosis

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2804,8 +2804,8 @@
   "@encouragementDawnWarm1": {"description":"Dawn encouragement 1"},
   "encouragementDawnWarm2": "The night may feel long. You're doing great",
   "@encouragementDawnWarm2": {"description":"Dawn encouragement 2"},
-  "encouragementDawnWarm3": "A quiet dawn with {baby}. This time is precious",
-  "@encouragementDawnWarm3": {"description":"Dawn encouragement 3", "placeholders": {"baby": {"type": "String"}}},
+  "encouragementDawnWarm3": "A quiet dawn with {babyIwa}. This time is precious",
+  "@encouragementDawnWarm3": {"description":"Dawn encouragement 3", "placeholders": {"babyIwa": {"type": "String"}}},
   "encouragementDawnWarm4": "Just a little more. Morning is coming",
   "@encouragementDawnWarm4": {"description":"Dawn encouragement 4"},
   "encouragementDawnPlain1": "Nighttime care recorded",
@@ -2815,10 +2815,10 @@
   "encouragementDawnPlain3": "Dawn records: {count}",
   "@encouragementDawnPlain3": {"description":"Dawn plain 3", "placeholders": {"count": {"type": "String"}}},
 
-  "encouragementMorningWarm1": "A new day begins with {baby}",
-  "@encouragementMorningWarm1": {"description":"Morning encouragement 1", "placeholders": {"baby": {"type": "String"}}},
-  "encouragementMorningWarm2": "You're taking great care of {baby} today too",
-  "@encouragementMorningWarm2": {"description":"Morning encouragement 2", "placeholders": {"baby": {"type": "String"}}},
+  "encouragementMorningWarm1": "A new day begins with {babyIwa}",
+  "@encouragementMorningWarm1": {"description":"Morning encouragement 1", "placeholders": {"babyIwa": {"type": "String"}}},
+  "encouragementMorningWarm2": "You're taking great care of {babyIreul} today too",
+  "@encouragementMorningWarm2": {"description":"Morning encouragement 2", "placeholders": {"babyIreul": {"type": "String"}}},
   "encouragementMorningPlain1": "Morning records started",
   "@encouragementMorningPlain1": {"description":"Morning plain 1"},
   "encouragementMorningPlain2": "Today's records: {count}",
@@ -2828,19 +2828,19 @@
 
   "encouragementAfternoonWarm2": "Remember to take breaks for yourself too",
   "@encouragementAfternoonWarm2": {"description":"Afternoon encouragement 2"},
-  "encouragementAfternoonWarm3": "An afternoon with {baby}. Enjoy this time",
-  "@encouragementAfternoonWarm3": {"description":"Afternoon encouragement 3", "placeholders": {"baby": {"type": "String"}}},
+  "encouragementAfternoonWarm3": "An afternoon with {babyIwa}. Enjoy this time",
+  "@encouragementAfternoonWarm3": {"description":"Afternoon encouragement 3", "placeholders": {"babyIwa": {"type": "String"}}},
   "encouragementAfternoonPlain1": "Afternoon records in progress",
   "@encouragementAfternoonPlain1": {"description":"Afternoon plain 1"},
   "encouragementAfternoonPlain2": "Today's records: {count}",
   "@encouragementAfternoonPlain2": {"description":"Afternoon plain 2", "placeholders": {"count": {"type": "String"}}},
 
-  "encouragementEveningWarm1": "Great job today. Both {baby} and you did well",
-  "@encouragementEveningWarm1": {"description":"Evening encouragement 1", "placeholders": {"baby": {"type": "String"}}},
+  "encouragementEveningWarm1": "Great job today. Both {babyIdo} and you did well",
+  "@encouragementEveningWarm1": {"description":"Evening encouragement 1", "placeholders": {"babyIdo": {"type": "String"}}},
   "encouragementEveningWarm2": "Time to wind down. Get some rest",
   "@encouragementEveningWarm2": {"description":"Evening encouragement 2"},
-  "encouragementEveningWarm3": "Every moment spent caring for {baby} today matters",
-  "@encouragementEveningWarm3": {"description":"Evening encouragement 3", "placeholders": {"baby": {"type": "String"}}},
+  "encouragementEveningWarm3": "Every moment spent caring for {babyIreul} today matters",
+  "@encouragementEveningWarm3": {"description":"Evening encouragement 3", "placeholders": {"babyIreul": {"type": "String"}}},
   "encouragementEveningPlain1": "Today's records: {count} complete",
   "@encouragementEveningPlain1": {"description":"Evening plain 1", "placeholders": {"count": {"type": "String"}}},
   "encouragementEveningPlain2": "Daily activity summary available",
@@ -2850,17 +2850,17 @@
 
   "encouragementGeneralWarm1": "Every day, both baby and parent are growing",
   "@encouragementGeneralWarm1": {"description":"General encouragement 1"},
-  "encouragementGeneralWarm2": "Each day with {baby} becomes a precious record",
-  "@encouragementGeneralWarm2": {"description":"General encouragement 2", "placeholders": {"baby": {"type": "String"}}},
+  "encouragementGeneralWarm2": "Each day with {babyIui} becomes a precious record",
+  "@encouragementGeneralWarm2": {"description":"General encouragement 2", "placeholders": {"babyIui": {"type": "String"}}},
   "encouragementGeneralWarm3": "It doesn't have to be perfect. You're doing enough",
   "@encouragementGeneralWarm3": {"description":"General encouragement 3"},
-  "encouragementGeneralWarm4": "Time spent for {baby} is never wasted",
-  "@encouragementGeneralWarm4": {"description":"General encouragement 4", "placeholders": {"baby": {"type": "String"}}},
+  "encouragementGeneralWarm4": "Time spent for {babyIreul} is never wasted",
+  "@encouragementGeneralWarm4": {"description":"General encouragement 4", "placeholders": {"babyIreul": {"type": "String"}}},
 
   "encouragementDataBadgeWarm": "Just earned [{badge}]. Amazing",
   "@encouragementDataBadgeWarm": {"description":"Data: badge earned", "placeholders": {"badge": {"type": "String"}}},
-  "encouragementDataSleepWarm": "{baby} slept {hours} hours in a row last night",
-  "@encouragementDataSleepWarm": {"description":"Data: sleep", "placeholders": {"baby": {"type": "String"}, "hours": {"type": "String"}}},
+  "encouragementDataSleepWarm": "{babyIga} slept {hours} hours in a row last night",
+  "@encouragementDataSleepWarm": {"description":"Data: sleep", "placeholders": {"babyIga": {"type": "String"}, "hours": {"type": "String"}}},
   "encouragementDataWeeklyWarm": "{count} records today. Great tracking",
   "@encouragementDataWeeklyWarm": {"description":"Data: weekly records", "placeholders": {"count": {"type": "String"}}}
 }
