--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -5375,8 +5375,8 @@
   "@encouragementDawnWarm1": {"description":"새벽 격려 1"},
   "encouragementDawnWarm2": "밤이 길게 느껴질 수 있어요. 잘 해나가고 있어요",
   "@encouragementDawnWarm2": {"description":"새벽 격려 2"},
-  "encouragementDawnWarm3": "{baby}이와 함께하는 고요한 새벽, 소중한 시간이에요",
-  "@encouragementDawnWarm3": {"description":"새벽 격려 3", "placeholders": {"baby": {"type": "String"}}},
+  "encouragementDawnWarm3": "{babyIwa} 함께하는 고요한 새벽, 소중한 시간이에요",
+  "@encouragementDawnWarm3": {"description":"새벽 격려 3", "placeholders": {"babyIwa": {"type": "String"}}},
   "encouragementDawnWarm4": "조금만 더요. 아침이 오고 있어요",
   "@encouragementDawnWarm4": {"description":"새벽 격려 4"},
   "encouragementDawnPlain1": "새벽 돌봄 기록됨",
@@ -5386,10 +5386,10 @@
   "encouragementDawnPlain3": "새벽 {count}회 기록",
   "@encouragementDawnPlain3": {"description":"새벽 plain 3", "placeholders": {"count": {"type": "String"}}},
 
-  "encouragementMorningWarm1": "{baby}이와 함께 새로운 하루가 시작됐어요",
-  "@encouragementMorningWarm1": {"description":"아침 격려 1", "placeholders": {"baby": {"type": "String"}}},
-  "encouragementMorningWarm2": "오늘도 {baby}이를 잘 돌봐주고 있네요",
-  "@encouragementMorningWarm2": {"description":"아침 격려 2", "placeholders": {"baby": {"type": "String"}}},
+  "encouragementMorningWarm1": "{babyIwa} 함께 새로운 하루가 시작됐어요",
+  "@encouragementMorningWarm1": {"description":"아침 격려 1", "placeholders": {"babyIwa": {"type": "String"}}},
+  "encouragementMorningWarm2": "오늘도 {babyIreul} 잘 돌봐주고 있네요",
+  "@encouragementMorningWarm2": {"description":"아침 격려 2", "placeholders": {"babyIreul": {"type": "String"}}},
   "encouragementMorningPlain1": "오전 기록 시작",
   "@encouragementMorningPlain1": {"description":"아침 plain 1"},
   "encouragementMorningPlain2": "오늘 기록: {count}건",
@@ -5399,19 +5399,19 @@
 
   "encouragementAfternoonWarm2": "부모님도 틈틈이 쉬어가세요",
   "@encouragementAfternoonWarm2": {"description":"오후 격려 2"},
-  "encouragementAfternoonWarm3": "{baby}이와 함께하는 오후, 좋은 시간이에요",
-  "@encouragementAfternoonWarm3": {"description":"오후 격려 3", "placeholders": {"baby": {"type": "String"}}},
+  "encouragementAfternoonWarm3": "{babyIwa} 함께하는 오후, 좋은 시간이에요",
+  "@encouragementAfternoonWarm3": {"description":"오후 격려 3", "placeholders": {"babyIwa": {"type": "String"}}},
   "encouragementAfternoonPlain1": "오후 기록 진행 중",
   "@encouragementAfternoonPlain1": {"description":"오후 plain 1"},
   "encouragementAfternoonPlain2": "금일 기록 {count}건",
   "@encouragementAfternoonPlain2": {"description":"오후 plain 2", "placeholders": {"count": {"type": "String"}}},
 
-  "encouragementEveningWarm1": "오늘 하루도 수고했어요. {baby}이도 부모님도 잘 해냈어요",
-  "@encouragementEveningWarm1": {"description":"저녁 격려 1", "placeholders": {"baby": {"type": "String"}}},
+  "encouragementEveningWarm1": "오늘 하루도 수고했어요. {babyIdo} 부모님도 잘 해냈어요",
+  "@encouragementEveningWarm1": {"description":"저녁 격려 1", "placeholders": {"babyIdo": {"type": "String"}}},
   "encouragementEveningWarm2": "하루를 마무리하는 시간이에요. 푹 쉬세요",
   "@encouragementEveningWarm2": {"description":"저녁 격려 2"},
-  "encouragementEveningWarm3": "{baby}이를 위해 쏟은 오늘 하루, 다 기억하고 있어요",
-  "@encouragementEveningWarm3": {"description":"저녁 격려 3", "placeholders": {"baby": {"type": "String"}}},
+  "encouragementEveningWarm3": "{babyIreul} 위해 쏟은 오늘 하루, 다 기억하고 있어요",
+  "@encouragementEveningWarm3": {"description":"저녁 격려 3", "placeholders": {"babyIreul": {"type": "String"}}},
   "encouragementEveningPlain1": "금일 기록 {count}건 완료",
   "@encouragementEveningPlain1": {"description":"저녁 plain 1", "placeholders": {"count": {"type": "String"}}},
   "encouragementEveningPlain2": "금일 활동 요약 가능",
@@ -5421,17 +5421,17 @@
 
   "encouragementGeneralWarm1": "매일 조금씩, 아기도 부모도 성장하고 있어요",
   "@encouragementGeneralWarm1": {"description":"일반 격려 1"},
-  "encouragementGeneralWarm2": "{baby}이의 하루하루가 소중한 기록이 되고 있어요",
-  "@encouragementGeneralWarm2": {"description":"일반 격려 2", "placeholders": {"baby": {"type": "String"}}},
+  "encouragementGeneralWarm2": "{babyIui} 하루하루가 소중한 기록이 되고 있어요",
+  "@encouragementGeneralWarm2": {"description":"일반 격려 2", "placeholders": {"babyIui": {"type": "String"}}},
   "encouragementGeneralWarm3": "완벽하지 않아도 괜찮아요. 충분히 잘 하고 있어요",
   "@encouragementGeneralWarm3": {"description":"일반 격려 3"},
-  "encouragementGeneralWarm4": "{baby}이를 위한 시간, 하나도 헛되지 않아요",
-  "@encouragementGeneralWarm4": {"description":"일반 격려 4", "placeholders": {"baby": {"type": "String"}}},
+  "encouragementGeneralWarm4": "{babyIreul} 위한 시간, 하나도 헛되지 않아요",
+  "@encouragementGeneralWarm4": {"description":"일반 격려 4", "placeholders": {"babyIreul": {"type": "String"}}},
 
   "encouragementDataBadgeWarm": "방금 [{badge}] 달성, 대단해요",
   "@encouragementDataBadgeWarm": {"description":"데이터 기반: 뱃지 달성", "placeholders": {"badge": {"type": "String"}}},
-  "encouragementDataSleepWarm": "어젯밤 {baby}이가 {hours}시간 연속으로 잤어요",
-  "@encouragementDataSleepWarm": {"description":"데이터 기반: 수면", "placeholders": {"baby": {"type": "String"}, "hours": {"type": "String"}}},
+  "encouragementDataSleepWarm": "어젯밤 {babyIga} {hours}시간 연속으로 잤어요",
+  "@encouragementDataSleepWarm": {"description":"데이터 기반: 수면", "placeholders": {"babyIga": {"type": "String"}, "hours": {"type": "String"}}},
   "encouragementDataWeeklyWarm": "오늘 {count}건, 꼼꼼히 기록하고 있네요",
   "@encouragementDataWeeklyWarm": {"description":"데이터 기반: 주간 기록", "placeholders": {"count": {"type": "String"}}}
 }
